# laex-svn

trunk/: Makefile  Makefile.am  Makefile.in  TODO.tasks  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac.bak  laex.desktop  libtool
trunk/po/: Makefile  Makefile.in
trunk/src/: Makefile  Makefile.am  Makefile.in  assistant_export.c  assistant_export.h  assistant_import.c  assistant_import.h  centry.c  centry.h  ck_diagramm.c  ck_diagramm.h  config.h  cstrman.c  cstrman.h  data.c  data.h  dialogEditEntry.ui  dialogStartTraining.ui  dialog_edit_entry.c  dialog_edit_entry.h  dialog_messages.c  dialog_messages.h  main.c  main_window.c  main_window.h  main_window.ui  options.h  select_words.c  select_words.h  statistics.c  statistics.h  word_practise.c  word_practise.h  word_preview.c  word_preview.h
trunk/src/doc/: main.html
trunk/src/ui/: assistant_export.ui  assistant_import.ui  dialogEditEntry.ui  main_window.ui
